# Greenhouse_controller

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Structs.h  icons.h  main.cpp  screen_selection.cpp
src/CO2_sensor/: GMP252.cpp  GMP252.h
src/EEPROM/: EEPROM.cpp  EEPROM.h
src/Fan/: Produal.cpp  Produal.h
src/GPIO/: GPIO.cpp  GPIO.h
src/Pressure_sensor/: SDP610.cpp  SDP610.h
src/T_RH_sensor/: HMP60.cpp  HMP60.h
src/Task_Control/: Control.cpp  Control.h
src/Task_Network/: Network.cpp  Network.h
src/Task_UI/: UI.cpp  UI.h
src/Valve/: Valve.cpp  Valve.h
src/ipstack/: IPStack.cpp  IPStack.h  http_test.cpp  tls_common.c
